[gd_scene load_steps=6 format=3 uid="uid://b2o7kqd5l8vxm"]

[ext_resource type="Script" path="res://game/scenes/game_scene/levels/call_of_chivalry_game.gd" id="1"]
[ext_resource type="Script" path="res://game/scripts/ui/location_selection_screen.gd" id="2"]
[ext_resource type="Script" path="res://game/scripts/ui/simple_challenge_screen.gd" id="3"]
[ext_resource type="Script" path="res://game/scripts/ui/game_over_screen.gd" id="4"]
[ext_resource type="Script" path="res://game/scripts/inventory/inventory_ui.gd" id="5"]

[node name="CallOfChivalryGame" type="Node"]
script = ExtResource("1")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="LocationSelectionScreen" type="Control" parent="UILayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/LocationSelectionScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="TitleLabel" type="Label" parent="UILayer/LocationSelectionScreen/VBoxContainer"]
layout_mode = 2
text = "Выберите локацию"
horizontal_alignment = 1

[node name="LocationsContainer" type="HBoxContainer" parent="UILayer/LocationSelectionScreen/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="UILayer/LocationSelectionScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Назад"

[node name="ChallengeScreen" type="Control" parent="UILayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/ChallengeScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StatusBar" type="HBoxContainer" parent="UILayer/ChallengeScreen/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="UILayer/ChallengeScreen/VBoxContainer/StatusBar"]
layout_mode = 2
text = "Здоровье: 3/3"

[node name="CoinsLabel" type="Label" parent="UILayer/ChallengeScreen/VBoxContainer/StatusBar"]
layout_mode = 2
text = "Золото: 5"

[node name="HorseLabel" type="Label" parent="UILayer/ChallengeScreen/VBoxContainer/StatusBar"]
layout_mode = 2
text = "Конь: Да"

[node name="LocationLabel" type="Label" parent="UILayer/ChallengeScreen/VBoxContainer"]
layout_mode = 2
text = "Локация"
horizontal_alignment = 1

[node name="ChallengeTitle" type="Label" parent="UILayer/ChallengeScreen/VBoxContainer"]
layout_mode = 2
text = "Название испытания"
horizontal_alignment = 1

[node name="ChallengeDescription" type="RichTextLabel" parent="UILayer/ChallengeScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Описание испытания"

[node name="ActionsContainer" type="VBoxContainer" parent="UILayer/ChallengeScreen/VBoxContainer"]
layout_mode = 2

[node name="GameOverScreen" type="Control" parent="UILayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="TitleLabel" type="Label" parent="UILayer/GameOverScreen/VBoxContainer"]
layout_mode = 2
text = "Игра окончена"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="UILayer/GameOverScreen/VBoxContainer"]
layout_mode = 2
text = "Статистика"
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="UILayer/GameOverScreen/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="UILayer/GameOverScreen/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Начать заново"

[node name="MenuButton" type="Button" parent="UILayer/GameOverScreen/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "В главное меню"

[node name="InventoryUI" type="Control" parent="UILayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("5")

[node name="GridContainer" type="GridContainer" parent="UILayer/InventoryUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
columns = 10